# Graph-coloring-via-CP-Column-Generation

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  main_master.cpp
src/cp_coloring/: cp.cpp  cp.h
src/graph/: graph.cpp  graph.h
src/heuristic/: heuristic.cpp  heuristic.h
src/master/: master.cpp  master.h
src/preprocessing/: clique_processing.cpp  clique_processing.h
tests/: queen9_9.col
